lab6_ingress_and_dns/myapp.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp
  namespace: kube-workshop
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      name: myapp
  template:
    metadata:
      labels:
        name: myapp
    spec:
      containers:
        - name: myapp-container
          image: crccheck/hello-world
          ports:
            - containerPort: 8000
          resources:
            requests:
              memory: 1Mi
              cpu: 0.5m
            limits:
              memory: 10Mi
              cpu: 1m
