lab6_ingress_and_dns/myapp-service.yml
apiVersion: v1
kind: Service
metadata:
  name: myapp-service
  namespace: kube-workshop
spec:
  type: ClusterIP
  selector:
    name: myapp
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
