lab6_ingress_and_dns/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp-ingress
  namespace: kube-workshop
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: myapp.igeargeek.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: myapp-service
                port:
                  number: 8000
